fix overflow

--- a/style.css
+++ b/style.css
@@ -244,7 +244,7 @@ img{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    font-size: 2.8rem;
+    font-size: 2.5rem;
     text-align: justify;
     padding: 25px;
     height: 80%;
@@ -367,7 +367,7 @@ img{
 }
 .head_project p{
     font-size: var(--font-size-project-header);
-    
+    text-align: center;
 }
 
 
